--- a/src/Diamante/DistributionBundle/Resources/views/progress.html.twig
+++ b/src/Diamante/DistributionBundle/Resources/views/progress.html.twig
@@ -13,7 +13,7 @@
         </li>
         <li{% if step == 'schema' %} class="active"{% endif %}>
             <strong class="step">3</strong>
-            <span>{{ 'process.step.schema.header'|trans }}</span>
+            <span>{{ 'process.step.diamanteinstall.header'|trans }}</span>
         </li>
         <li{% if step == 'setup' %} class="active"{% endif %}>
             <strong class="step">4</strong>
