--- a/Resources/views/embeddedForm.html.twig
+++ b/Resources/views/embeddedForm.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form with ['OroCRMContactUsBundle::fields.html.twig'] %}
+{% form_theme form with ['DiamanteEmbeddedFormBundle::fields.html.twig'] %}
 
 {{ form_start(form, {'action': url('diamante_embedded_form_submit', {'id': formEntity.id}), 'attr': {'id': form.vars.name }}) }}
 <div class="wrapper">
