--- a/src/Diamante/DistributionBundle/Resources/views/layout.html.twig
+++ b/src/Diamante/DistributionBundle/Resources/views/layout.html.twig
@@ -8,6 +8,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% block title %}{{ 'title'|trans }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="manifest" href="{{ asset('bundles/diamantedistribution/img/ico/manifest.json') }}">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ asset('bundles/diamantedistribution/img/ico/apple-touch-icon-57x57.png')}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ asset('bundles/diamantedistribution/img/ico/apple-touch-icon-60x60.png')}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('bundles/diamantedistribution/img/ico/apple-touch-icon-72x72.png')}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ asset('bundles/diamantedistribution/img/ico/apple-touch-icon-76x76.png')}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset('bundles/diamantedistribution/img/ico/apple-touch-icon-114x114.png')}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ asset('bundles/diamantedistribution/img/ico/apple-touch-icon-120x120.png')}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset('bundles/diamantedistribution/img/ico/apple-touch-icon-144x144.png')}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ asset("bundles/diamantedistribution/img/ico/apple-touch-icon-152x152.png")}}" />
+
+    <link rel="icon" type="image/png" href="{{ asset('bundles/diamantedistribution/img/ico/favicon-16x16.png')}}" sizes="16x16" />
+    <link rel="icon" type="image/png" href="{{ asset('bundles/diamantedistribution/img/ico/favicon-32x32.png')}}" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{ asset('bundles/diamantedistribution/img/ico/favicon-96x96.png')}}" sizes="96x96" />
+    <link rel="icon" type="image/png" href="{{ asset('bundles/diamantedistribution/img/ico/favicon-194x194.png')}}" sizes="194x194" />
+
+    <meta name="application-name" content="{% block title %}{{ 'title'|trans }}{% endblock %}"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="{{ asset('bundles/diamantedistribution/img/ico/mstile-144x144.png') }}" />
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/oroinstaller/css/style.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/diamantedistribution/css/style.css') }}" />
     <script type="text/javascript" src="{{ asset('bundles/oroinstaller/lib/jquery-2.0.3.min.js') }}"></script>
