DIAM-947 Add menu item for embedded forms

--- a/Resources/views/Form/branchField.html.twig
+++ b/Resources/views/Form/branchField.html.twig
@@ -7,8 +7,7 @@
             function (EmbeddedFormWatcher) {
                 new EmbeddedFormWatcher({
                     formTypeFieldId: {{ form.formType.vars.id|json_encode|raw }},
-                    branchFieldId: {{ form.branch.vars.id|json_encode|raw }},
-                    channelFieldId: {{ form.dataChannel.vars.id|json_encode|raw }}
+                    branchFieldId: {{ form.branch.vars.id|json_encode|raw }}
                 }).startWatching();
             });
 </script>
