Fix attachment input style

--- a/Resources/views/embeddedForm.html.twig
+++ b/Resources/views/embeddedForm.html.twig
@@ -1,4 +1,17 @@
 {% form_theme form with ['DiamanteEmbeddedFormBundle::fields.html.twig'] %}
+<script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+        var fileToRead = document.getElementById("diamante_embedded_form_attachmentsInput");
+        fileToRead.addEventListener("change", function(event) {
+            var files = fileToRead.files;
+            var len = files.length;
+            // we should read just one file
+            if (len) {
+                document.getElementById("file-title-first").innerHTML = files[0].name;
+            }
+        }, false);
+    });
+</script>
 
 {{ form_start(form, {'action': url('diamante_embedded_form_submit', {'id': formEntity.id}), 'attr': {'id': form.vars.name }}) }}
 <div class="wrapper">
@@ -22,7 +35,11 @@
         {{ form_row(form.description) }}
     </div>
     <div class="row-group">
-        {{ form_row(form.attachmentsInput) }}
+        <div id="file-box">
+            {{ form_row(form.attachmentsInput) }}
+            <span id="file-title-first">Please select a file...</span>
+            <span id="file-title-second">Choose File</span>
+        </div>
     </div>
     <div class="row-group">
         {{ form_widget(form.submit) }}
