--- a/src/Diamante/DistributionBundle/Resources/views/layout.html.twig
+++ b/src/Diamante/DistributionBundle/Resources/views/layout.html.twig
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}{{ 'title'|trans }}{% endblock %}</title>
+    <title>{{ block('title') }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="manifest" href="{{ asset('bundles/diamantedistribution/img/ico/manifest.json') }}">
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" href="{{ asset('bundles/diamantedistribution/img/ico/favicon-96x96.png')}}" sizes="96x96" />
     <link rel="icon" type="image/png" href="{{ asset('bundles/diamantedistribution/img/ico/favicon-194x194.png')}}" sizes="194x194" />
 
-    <meta name="application-name" content="{% block title %}{{ 'title'|trans }}{% endblock %}"/>
+    <meta name="application-name" content="DiamanteDesk"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="{{ asset('bundles/diamantedistribution/img/ico/mstile-144x144.png') }}" />
     <meta name="theme-color" content="#ffffff">
