--- a/Resources/views/Ticket/widget/watchers.html.twig
+++ b/Resources/views/Ticket/widget/watchers.html.twig
@@ -5,6 +5,13 @@
         {% for watcher in watchers %}
             <li class="diam-attachment">
                 {{ render_user_name(watcher) }}
+                <span class="pull-right">
+                    <a href="{{ path('diamante_remove_watcher', { 'ticketId': ticketId, 'user': watcher } ) }}">
+                        <i class="icon-remove hide-text" title="{{ 'diamante.desk.ui.delete'|trans }}">
+                            {{ 'diamante.desk.ui.delete'|trans }}
+                        </i>
+                    </a>
+                </span>
             </li>
         {% endfor %}
     </ul>
