DIAM-1018 Fix an error attaching files to a new ticket DIAM-841 Make one request for attaching files and creating ticket

--- a/Resources/assets/js/modules/Attachment/templates/item.ejs
+++ b/Resources/assets/js/modules/Attachment/templates/item.ejs
@@ -2,7 +2,11 @@
     <li><button class="btn btn-link js-delete-attachment" title="Delete Comment"><i class="fa
     fa-times"></i></button></li>
 </ul>
-<% if (typeof(thumbnails) !== 'undefined') { %>
-    <img src="<%= thumbnails.url %>" alt="<%= file.filename %>"><br>
+<% if (typeof(file) !== 'undefined') { %>
+  <% if (typeof(thumbnails) !== 'undefined') { %>
+      <img src="<%= thumbnails.url %>" alt="<%= file.filename %>"><br>
+  <% } %>
+  <a href="<%= file.url %>" title="Download: <%= file.filename %>"><%= file.filename %></a>
+<% } else { %>
+  <a href="<%= base64 %>" title="Download: <%= filename %>"><%= filename %></a>
 <% } %>
-<a href="<%= file.url %>" title="Download: <%= file.filename %>"><%= file.filename %></a>
