--- a/Resources/views/Dashboard/widget.html.twig
+++ b/Resources/views/Dashboard/widget.html.twig
@@ -1,6 +1,15 @@
 {% extends 'OroDashboardBundle:Dashboard:widget.html.twig' %}
 
 {% block content %}
-    {{ dump(data) }}
+
+    {% set options  = {
+        data: data
+    } %}
+
+    <div class="diam-plot diam-{{ chart_type }}-widget"
+         data-page-component-module="diamantedesk/js/app/components/{{ chart_type }}-widget-component"
+         data-page-component-options="{{ options|json_encode }}"></div>
+
+    {#{{ dump(data) }}#}
 {% endblock %}
 
