--- a/Resources/views/Report/view.html.twig
+++ b/Resources/views/Report/view.html.twig
@@ -1,1 +1,17 @@
-{{ dump(data) }}
+{% extends 'DiamanteDeskBundle::layout.html.twig' %}
+
+{% block content %}
+
+    {% set options  = {
+        data: data
+    } %}
+    <div class="container-fluid">
+        <div class="diam-plot diam-{{ chart_type }}-widget"
+             data-page-component-module="diamantedesk/js/app/components/{{ chart_type }}-widget-component"
+             data-page-component-options="{{ options|json_encode }}"></div>
+
+        {#{{ dump(data) }}#}
+        {#{{ dump(chart_type) }}#}
+    </div>
+
+{% endblock content %}
