DIAM-929 Branches View Page: Near with name of branch should be displayed a tags

--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -307,7 +307,7 @@
     color: #fff;
 }
 
-.ticket-tag-inline {
+.tag-inline {
     padding: 3px;
     background-color: #EDD0CD;
     border-radius: 5px;
