DIAM-957: fixed tests and email templates

--- a/Resources/views/Notification/ForceReset/reset.html.twig
+++ b/Resources/views/Notification/ForceReset/reset.html.twig
@@ -24,7 +24,8 @@
                   </h1>
 
                   <p style="font-size: 16px; font-weight: 200; line-height: 20px;">
-                    Administrator requested you to change your password. Click on link below to proceed.<br/>
+                    Something strange happened on our servers but did everything possible to protect your data. <br/>
+                    Due to the security concerns administrator requested you to change your password. Click on link below to proceed.<br/>
                     <a href="{{ get_password_reset_link(activation_hash) }}">Link to reset password.</a>
                   </p>
                 </td>
