--- a/Resources/views/Notification/ForceReset/reset.txt.twig
+++ b/Resources/views/Notification/ForceReset/reset.txt.twig
@@ -1,5 +1,6 @@
 Hey there!
 
-Administrator requested you to change your password. Click on link below to proceed.
+Something strange happened on our servers but did everything possible to protect your data.
+Due to the security concerns administrator requested you to change your password. Click on link below to proceed.
 
 {{ get_password_reset_link(activation_hash) }}
