--- a/Resources/views/Notification/Create/created.html.twig
+++ b/Resources/views/Notification/Create/created.html.twig
@@ -1,13 +1,49 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <p>We have created account for you. You will be able to check status of your support tickets on <a href="{{ get_portal_link() }}">support portal</a>.</p>
+<!-- Inliner Build Version 4380b7741bb759d6cb997545f3add21ad48f010b -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml" style="color: #222; background: #FFF; margin: 0; padding: 0;">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width" />
+</head>
+<body style="color: #222; background: #FFF; margin: 0; padding: 0;" bgcolor="#FFF">
+<table cellspacing="0" cellpadding="0" class="body" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; width: 100%; background: #fff; margin: 0; padding: 2em;" bgcolor="#fff">
+    <tr>
+        <td class="center" align="center" valign="top" style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;">
+            <center>
 
-        <p>Before using account please create new password for it.</p>
+                <table cellspacing="0" cellpadding="0" style="width: 100%; margin: 0; padding: 0;">
+                    <tr>
+                        <td class="logo" style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0 0 50px;" align="left" valign="top">
+                            <img src="{{ app.request.scheme ~'://' ~ app.request.httpHost ~ asset('bundles/diamantefront/img/logo.png') }}" alt="DiamanteDesk" height="52" width="280" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
+                            <h1 style="font-size: 20px; font-weight: 400; margin: 0 0 25px;">
+                                Hey there!
+                            </h1>
 
-        <p>Click <a href="{{ get_password_reset_link(activation_hash) }}">this link</a> to proceed.</p>
-    </body>
+                            <p style="font-size: 16px; font-weight: 200; line-height: 20px;">
+                                We have created account for you. You will be able to check status of your support tickets on <a href="{{ get_portal_link() }}">support portal</a>.<br/>
+                                Before using account please create new password for it. <br/>
+
+                                Click <a href="{{ get_password_reset_link(activation_hash) }}">this link</a> to proceed.
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
+                            <p class="small thank-you" style="font-size: 14px; font-weight: 200; line-height: 20px; padding: 35px 0 0;">
+                                Thank you,
+                                <br />
+                                DiamanteDesk Team
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </center>
+        </td>
+    </tr>
+</table>
+</body>
 </html>
