DIAM-1121 - Improvments for mass action popup
Adding required improvements.

--- a/Resources/views/Ticket/widget/massMove.html.twig
+++ b/Resources/views/Ticket/widget/massMove.html.twig
@@ -1,4 +1,4 @@
-<div class="widget-content form-horizontal box-content row-fluid">
+<div class="widget-content form-horizontal box-content row-fluid" style="margin-left:-25px; margin-top:25px;">
     {% if reload_page is defined and reload_page %}
         <script type="text/javascript">
             require(['oroui/js/widget-manager', 'oroui/js/mediator'],
