--- a/Resources/views/Ticket/widget/massAddWatcher.html.twig
+++ b/Resources/views/Ticket/widget/massAddWatcher.html.twig
@@ -2,7 +2,7 @@
 {% form_theme form 'DiamanteDeskBundle:Ticket/widget:genemu_jqueryselect2_javascript.html.twig' %}
 {% endif %}
 
-<div class="widget-content form-horizontal box-content row-fluid">
+<div class="widget-content form-horizontal box-content row-fluid" style="margin-left:-25px; margin-top:25px;">
     {% if reload_page is defined and reload_page %}
         <script type="text/javascript">
             require(['oroui/js/widget-manager', 'oroui/js/mediator'],
