--- a/Resources/views/Ticket/widget/massAssignee.html.twig
+++ b/Resources/views/Ticket/widget/massAssignee.html.twig
@@ -1,4 +1,4 @@
-<div class="widget-content form-horizontal box-content row-fluid">
+<div class="widget-content form-horizontal box-content row-fluid" style="margin-left:-25px; margin-top:25px;">
     {% if saved is defined and saved %}
         <script type="text/javascript">
             require(['oroui/js/widget-manager', 'oroui/js/mediator'],
