DIAM-1115: Fixed reports

--- a/src/Diamante/DeskBundle/Resources/views/Report/view.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Report/view.html.twig
@@ -4,7 +4,10 @@
 
 {% block content %}
     {% set options  = {
-        data: data
+        data: data,
+        parent: {
+            el: '.diam-plot'
+        }
     } %}
     <div class="container-fluid">
         <div class="navigation clearfix navbar-extra navbar-extra-right">
